--- a/AndroidLesson1/app/src/main/res/layout/activity_main.xml
+++ b/AndroidLesson1/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,29 @@
     android:layout_height="match_parent"
     tools:context="com.yufengyuanx.androidlesson1.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <!--<TextView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="Hello World!"-->
+        <!--app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--app:layout_constraintLeft_toLeftOf="parent"-->
+        <!--app:layout_constraintRight_toRightOf="parent"-->
+        <!--app:layout_constraintTop_toTopOf="parent" />-->
+
+    <!-- This is our main activity -->
+    <!-- In this activity, we have a ListView with
+
+                        id = event_list
+             layout_height = wrap_content
+              layout_width = match_parent
+    -->
+
+
+
+    <ListView
+        android:id="@+id/event_list"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_width="match_parent" />
+
 
 </android.support.constraint.ConstraintLayout>
